switched the emoji to the logo

--- a/style.css
+++ b/style.css
@@ -64,3 +64,9 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
+
+.title{
+    color:#a17ed2;
+    font-size: 12vw; 
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
