--- a/style.css
+++ b/style.css
@@ -52,6 +52,25 @@
     background-color: #63398f;
 }
 
+.sidebtn{
+    background-color: #a17ed2;
+    border: 2px solid #6e609f;
+    color: #f0d9ff;
+}
+
+.resborder{
+    border: solid 3px #6e609f;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.startbtn{
+    background-color: #a17ed2;
+    border: 2px solid #6e609f;
+    width: 25vw;
+    color: #f0d9ff;
+    font-size: 20px;
+}
 
 .btnstl {
     font-family: 'Nunito', sans-serif;
