--- a/style.css
+++ b/style.css
@@ -103,5 +103,5 @@ input[type=number] {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .dropdown-menu-dark {
-    --bs-dropdown-bg: #4a2375;
+    --bs-dropdown-bg: #a17ed2;
 }
