--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 .btn3d {
     position: relative;
     top: -6px;
@@ -101,6 +102,17 @@ input[type=number] {
 .title{
     color:#a17ed2;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.pars{
+    color:#a17ed2;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: large;
+}
+
+.res{
+    color: #a17ed2;
+    font-family: 'Lilita One', cursive;
 }
 .dropdown-menu-dark {
     --bs-dropdown-bg: #a17ed2;
